--- a/composer.json
+++ b/composer.json
@@ -16,8 +16,7 @@
         "laravel/framework": "^7.0",
         "laravel/tinker": "^2.0",
         "maatwebsite/excel": "^3.1",
-        "overtrue/wechat": "~4.0",
-        "cblink/laravel-excel-zip":"^1.0.1"
+        "overtrue/wechat": "~4.0"
     },
     "require-dev": {
         "facade/ignition": "^2.0",
